--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="nav-container">
               <div class="nav-logo">
-          <img src="Logo.png" alt="NHS Law Firm Logo" class="logo-image">
+          <img src="New Logo.png" alt="NHS Law Firm Logo" class="logo-image">
         </div>
       <ul class="nav-menu">
         <li class="nav-item">
@@ -26,7 +26,7 @@
           <a href="natalie.html" class="nav-link">Our Founder</a>
         </li>
         <li class="nav-item">
-          <a href="book.html" class="nav-link">Book Consultation</a>
+          <a href="book.html" class="nav-link">Contact</a>
         </li>
       </ul>
       <div class="hamburger">
@@ -57,9 +57,7 @@
             <p>With nearly three decades of experience, our firm combines deep legal expertise with a personalized approach to ensure every client receives the attention and care they deserve.</p>
           </div>
           <div class="mission-image">
-            <div class="image-placeholder">
-              <i class="fas fa-balance-scale"></i>
-            </div>
+            <img src="nat-working.webp" alt="Natalie working at NHS Law Firm" class="mission-image">
           </div>
         </div>
       </section>
@@ -110,9 +108,7 @@
       <section class="founder-preview" data-aos="fade-up">
         <div class="founder-content">
           <div class="founder-image">
-            <div class="image-placeholder">
-              <i class="fas fa-user-tie"></i>
-            </div>
+            <img src="natselfie.webp" alt="Natalie Hurley Harden Schmidt" class="founder-portrait">
           </div>
           <div class="founder-text">
             <h2>Meet Our Founder</h2>
