--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="nav-container">
               <div class="nav-logo">
-          <img src="Logo.png" alt="NHS Law Firm Logo" class="logo-image">
+          <img src="New Logo.png" alt="NHS Law Firm Logo" class="logo-image">
         </div>
       <ul class="nav-menu">
         <li class="nav-item">
@@ -26,7 +26,7 @@
           <a href="natalie.html" class="nav-link">Our Founder</a>
         </li>
         <li class="nav-item">
-          <a href="book.html" class="nav-link">Book Consultation</a>
+          <a href="book.html" class="nav-link">Contact</a>
         </li>
       </ul>
       <div class="hamburger">
@@ -183,9 +183,9 @@
           <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our privacy practices, please contact us:</p>
           <div class="contact-info">
             <p><strong>NHS Law Firm</strong></p>
-            <p>Email: privacy@nhslawfirm.com</p>
-            <p>Phone: [Your Phone Number]</p>
-            <p>Address: [Your Address]</p>
+            <p>Email: <a href="mailto:natalie@nhslawfirm.com">natalie@nhslawfirm.com</a></p>
+            <p>Phone: <a href="tel:+16625018580">+1 (662) 501-8580</a></p>
+            <p>Service Areas: Mississippi & Tennessee</p>
           </div>
           <p>We will respond to your inquiry within a reasonable timeframe.</p>
         </div>
@@ -224,6 +224,8 @@
         </div>
         <div class="footer-section">
           <h4>Contact</h4>
+          <p>Phone: <a href="tel:+16625018580">+1 (662) 501-8580</a></p>
+          <p>Email: <a href="mailto:natalie@nhslawfirm.com">natalie@nhslawfirm.com</a></p>
           <p>Licensed in Mississippi & Tennessee</p>
           <p>Listed Rule 31 Mediator</p>
         </div>
