--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="nav-container">
               <div class="nav-logo">
-          <img src="Logo.png" alt="NHS Law Firm Logo" class="logo-image">
+          <img src="New Logo.png" alt="NHS Law Firm Logo" class="logo-image">
         </div>
       <ul class="nav-menu">
         <li class="nav-item">
@@ -26,7 +26,7 @@
           <a href="natalie.html" class="nav-link">Our Founder</a>
         </li>
         <li class="nav-item">
-          <a href="book.html" class="nav-link">Book Consultation</a>
+          <a href="book.html" class="nav-link">Contact</a>
         </li>
       </ul>
       <div class="hamburger">
@@ -43,12 +43,10 @@
       <h1 class="hero-title">
         <span class="typing-static">Safeguard Your&nbsp;</span>
         <span class="typing-dynamic" id="typingText"></span>
-        <span class="typing-cursor">|</span>
       </h1>
       <p class="hero-subtitle">Elite estate planning and legal services for discerning clients</p>
       <div class="hero-buttons">
-        <a href="book.html" class="btn btn-primary">Schedule Consultation</a>
-        <a href="about.html" class="btn btn-secondary">Learn More</a>
+        <a href="book.html" class="btn btn-primary">Contact Us</a>
       </div>
     </div>
   </section>
@@ -165,7 +163,7 @@
           <div class="stat-label">Cases Handled</div>
         </div>
         <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
-          <div class="stat-number">High Client Satisfaction</div>
+          <div class="stat-number">High</div>
           <div class="stat-label">Client Satisfaction</div>
         </div>
         <div class="stat-item" data-aos="fade-up" data-aos-delay="300">
