--- a/natalie.html
+++ b/natalie.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="nav-container">
               <div class="nav-logo">
-          <img src="Logo.png" alt="NHS Law Firm Logo" class="logo-image">
+          <img src="New Logo.png" alt="NHS Law Firm Logo" class="logo-image">
         </div>
       <ul class="nav-menu">
         <li class="nav-item">
@@ -26,7 +26,7 @@
           <a href="natalie.html" class="nav-link active">Our Founder</a>
         </li>
         <li class="nav-item">
-          <a href="book.html" class="nav-link">Book Consultation</a>
+          <a href="book.html" class="nav-link">Contact</a>
         </li>
       </ul>
       <div class="hamburger">
@@ -52,9 +52,7 @@
       <section class="founder-profile" data-aos="fade-up">
         <div class="founder-content">
           <div class="founder-image">
-            <div class="image-placeholder large">
-              <i class="fas fa-user-tie"></i>
-            </div>
+            <img src="natselfie.webp" alt="Natalie Hurley Harden Schmidt" class="founder-portrait">
           </div>
           <div class="founder-info">
             <h2>About Natalie</h2>
