--- a/tax.html
+++ b/tax.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="nav-container">
       <div class="nav-logo">
-        <img src="Logo.png" alt="NHS Law Firm Logo" class="logo-image">
+        <img src="New Logo.png" alt="NHS Law Firm Logo" class="logo-image">
       </div>
       <ul class="nav-menu">
         <li class="nav-item">
